cloudsim: alter config_version schema: remove version_number, add description
Decided that this more flexible approach made more sense.

Use cmp.Diff in unit tests
